@@ -1,12 +1,15 @@
-;;; kotl-autoloads.el --- automatically extracted autoloads
+;;; kotl-loaddefs.el --- automatically extracted autoloads
+;;
+;; Copyright (C) 2016  Free Software Foundation, Inc.
 ;;
 ;;; Code:
 
 
-;;;### (autoloads (kexport:html) "kexport" "kexport.el" (22412 20800))
+;;;### (autoloads nil "kexport" "kexport.el" (22419 35813 249912
+;;;;;;  697000))
 ;;; Generated autoloads from kexport.el
 
-(autoload (quote kexport:html) "kexport" "\
+(autoload 'kexport:html "kexport" "\
 Export a koutline buffer or file in EXPORT-FROM to html format in OUTPUT-TO.
 By default, this retains newlines within cells as they are.  With optional prefix arg, SOFT-NEWLINES-P, 
 hard newlines are not used.  Also converts Urls and Klinks into Html hyperlinks.
@@ -18,33 +21,31 @@ STILL TODO:
 
 ;;;***
 
-;;;### (autoloads (kfile:view kfile:is-p kfile:find) "kfile" "kfile.el"
-;;;;;;  (22412 20800))
+;;;### (autoloads nil "kfile" "kfile.el" (22415 50714 78447 943000))
 ;;; Generated autoloads from kfile.el
 
-(autoload (quote kfile:find) "kfile" "\
+(autoload 'kfile:find "kfile" "\
 Find a file FILE-NAME containing a kotl or create one if none exists.
 Return the new kview.
 
 \(fn FILE-NAME)" t nil)
 
-(autoload (quote kfile:is-p) "kfile" "\
+(autoload 'kfile:is-p "kfile" "\
 Iff current buffer contains an unformatted or formatted koutline, return file format version string, else nil.
 
 \(fn)" nil nil)
 
-(autoload (quote kfile:view) "kfile" "\
+(autoload 'kfile:view "kfile" "\
 View an existing kotl version-2 file FILE-NAME in a read-only mode.
 
 \(fn FILE-NAME)" t nil)
 
 ;;;***
 
-;;;### (autoloads (kimport:text kimport:star-outline kimport:aug-post-outline
-;;;;;;  kimport:file) "kimport" "kimport.el" (22412 23155))
+;;;### (autoloads nil "kimport" "kimport.el" (22415 50714 79447 574000))
 ;;; Generated autoloads from kimport.el
 
-(defvar kimport:mode-alist (quote ((t . kimport:text) (outline-mode . kimport:star-outline))) "\
+(defvar kimport:mode-alist '((t . kimport:text) (outline-mode . kimport:star-outline)) "\
 Alist of (major-mode . importation-function) elements.
 This determines the type of importation done on a file when `kimport:file' is
 called if the major mode of the import file matches the car of an element in
@@ -64,7 +65,7 @@ as the initial set of children of the current cell, if any.
 
    all others    - imported as text.")
 
-(defvar kimport:suffix-alist (quote (("\\.otl$" . kimport:star-outline) ("\\.aug$" . kimport:aug-post-outline))) "\
+(defvar kimport:suffix-alist '(("\\.otl$" . kimport:star-outline) ("\\.aug$" . kimport:aug-post-outline)) "\
 Alist of (buffer-name-suffix-regexp . importation-function) elements.
 This determines the type of importation done on a file when `kimport:file' is
 called.  Each importation-function must take two arguments, a buffer/file to
@@ -77,7 +78,7 @@ cells as the initial set of children of the current cell, if any.
    .kotl - imported as a structured koutline
    .aug  - imported as an Augment post-numbered outline.")
 
-(autoload (quote kimport:file) "kimport" "\
+(autoload 'kimport:file "kimport" "\
 Import a buffer or file IMPORT-FROM into the koutline in buffer or file OUTPUT-TO.
 
 Any suffix in IMPORT-FROM's buffer name is used to determine the type of
@@ -88,7 +89,7 @@ information on specific importation formats.
 
 \(fn IMPORT-FROM OUTPUT-TO &optional CHILDREN-P)" t nil)
 
-(autoload (quote kimport:aug-post-outline) "kimport" "\
+(autoload 'kimport:aug-post-outline "kimport" "\
 Insert Augment outline statements from IMPORT-FROM into koutline OUTPUT-TO.
 Displays and leaves point in OUTPUT-TO.  See documentation for
 `kimport:initialize' for valid values of IMPORT-FROM and OUTPUT-TO and for
@@ -103,7 +104,7 @@ on.
 
 \(fn IMPORT-FROM OUTPUT-TO &optional CHILDREN-P)" t nil)
 
-(autoload (quote kimport:star-outline) "kimport" "\
+(autoload 'kimport:star-outline "kimport" "\
 Insert star outline nodes from IMPORT-FROM into koutline OUTPUT-TO.
 Displays and leaves point in OUTPUT-TO.  See documentation for
 `kimport:initialize' for valid values of IMPORT-FROM and OUTPUT-TO and for
@@ -113,7 +114,7 @@ an explanation of where imported cells are placed.
 
 \(fn IMPORT-FROM OUTPUT-TO &optional CHILDREN-P)" t nil)
 
-(autoload (quote kimport:text) "kimport" "\
+(autoload 'kimport:text "kimport" "\
 Insert text paragraphs from IMPORT-FROM into koutline OUTPUT-TO.
 Displays and leaves point in OUTPUT-TO.  See documentation for
 `kimport:initialize' for valid values of IMPORT-FROM and OUTPUT-TO and for
@@ -128,10 +129,10 @@ The variable, `paragraph-start,' is used to determine paragraphs.
 
 ;;;***
 
-;;;### (autoloads (klink:create) "klink" "klink.el" (22412 23155))
+;;;### (autoloads nil "klink" "klink.el" (22415 50714 80447 205000))
 ;;; Generated autoloads from klink.el
 
-(autoload (quote klink:create) "klink" "\
+(autoload 'klink:create "klink" "\
 Insert at point an implicit link to REFERENCE.
 REFERENCE should be a cell-ref or a string containing \"filename, cell-ref\".
 See documentation for `kcell:ref-to-id' for valid cell-ref formats.
@@ -140,54 +141,52 @@ See documentation for `kcell:ref-to-id' for valid cell-ref formats.
 
 ;;;***
 
-;;;### (autoloads (kotl-mode:is-p kotl-mode:show-tree kotl-mode:hide-tree
-;;;;;;  kotl-mode:top-cells kotl-mode:show-all kotl-mode:overview
-;;;;;;  kotl-mode:example kotl-mode) "kotl-mode" "kotl-mode.el" (22417
-;;;;;;  27935))
+;;;### (autoloads nil "kotl-mode" "kotl-mode.el" (22418 11616 709753
+;;;;;;  7000))
 ;;; Generated autoloads from kotl-mode.el
 
-(autoload (quote kotl-mode) "kotl-mode" "\
+(autoload 'kotl-mode "kotl-mode" "\
 The major mode used to edit and view koutlines.
 It provides the following keys:
 \\{kotl-mode-map}
 
 \(fn)" t nil)
 
-(autoload (quote kotl-mode:example) "kotl-mode" "\
+(autoload 'kotl-mode:example "kotl-mode" "\
 Display the Koutliner example file for demonstration use by a user.
 
 \(fn)" t nil)
 
-(autoload (quote kotl-mode:overview) "kotl-mode" "\
+(autoload 'kotl-mode:overview "kotl-mode" "\
 Show the first line of each cell.
 With optional prefix ARG, toggle display of blank lines between cells.
 
 \(fn &optional ARG)" t nil)
 
-(autoload (quote kotl-mode:show-all) "kotl-mode" "\
+(autoload 'kotl-mode:show-all "kotl-mode" "\
 Show (expand) all cells in the current view.
 With optional prefix ARG, toggle display of blank lines between cells.
 
 \(fn &optional ARG)" t nil)
 
-(autoload (quote kotl-mode:top-cells) "kotl-mode" "\
+(autoload 'kotl-mode:top-cells "kotl-mode" "\
 Collapse all level 1 cells in view and hide any deeper sublevels.
 With optional prefix ARG, toggle display of blank lines between cells.
 
 \(fn &optional ARG)" t nil)
 
-(autoload (quote kotl-mode:hide-tree) "kotl-mode" "\
+(autoload 'kotl-mode:hide-tree "kotl-mode" "\
 Collapse tree rooted at optional CELL-REF (defaults to cell at point).
 With optional SHOW-FLAG, expand the tree instead.
 
 \(fn &optional CELL-REF SHOW-FLAG)" t nil)
 
-(autoload (quote kotl-mode:show-tree) "kotl-mode" "\
+(autoload 'kotl-mode:show-tree "kotl-mode" "\
 Display fully expanded tree rooted at CELL-REF.
 
 \(fn &optional CELL-REF)" t nil)
 
-(autoload (quote kotl-mode:is-p) "kotl-mode" "\
+(autoload 'kotl-mode:is-p "kotl-mode" "\
 Signal an error if current buffer is not a Hyperbole outline, else return t.
 
 \(fn)" nil nil)
@@ -196,13 +195,15 @@ Signal an error if current buffer is not a Hyperbole outline, else return t.
 
 ;;;### (autoloads nil nil ("kcell.el" "kfill.el" "klabel.el" "kmenu.el"
 ;;;;;;  "knode.el" "kprop-em.el" "kprop-xe.el" "kproperty.el" "kview.el"
-;;;;;;  "kvspec.el") (22418 26292 487576))
+;;;;;;  "kvspec.el") (22419 36720 3219 570000))
 
 ;;;***
 
+(provide 'kotl-loaddefs)
 ;; Local Variables:
 ;; version-control: never
 ;; no-byte-compile: t
 ;; no-update-autoloads: t
+;; coding: utf-8
 ;; End:
-;;; kotl-autoloads.el ends here
+;;; kotl-loaddefs.el ends here
